<resources>
    <string name="app_name">News</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="sports">Sports</string>
    <string name="science">Science</string>
    <string name="technology">Technology</string>
    <string name="business">Business</string>
    <string name="health">Health</string>
    <string name="entertainment">Entertainment</string>
    <string name="pick_your_category_of">Pick your category of</string>
    <string name="interest">interest✨</string>
    <string name="no_results">No Results</string>
    <string name="settings">Settings</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="categories">Categories</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="check_your_internet_connection">Check your internet connection</string>
</resources>