<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:gbp="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_20sdp"
    tools:context=".ui.fragments.CategoriesFragment">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/_100sdp">
            </Space>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:weightSum="2"
                android:layoutDirection="ltr"
                android:orientation="horizontal">
                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/sportsCategory"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_130sdp"
                    android:layout_weight="1"
                    style="@style/LeftSide"
                    android:layout_margin="@dimen/_5sdp"
                    app:cardElevation="15dp"
                    app:cardPreventCornerOverlap="true"
                    app:cardBackgroundColor="@color/appSecondColor"
                    app:cardMaxElevation="20dp">
                    <LinearLayout
                        android:id="@+id/sports_ca"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:weightSum="5"
                        android:background="@drawable/category_shape_right_side"
                        >
                        <ImageView
                            android:id="@+id/sportsImage"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="4"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:padding="@dimen/_10sdp"
                            android:src="@drawable/sports_icon" />
                        <TextView
                            android:id="@+id/sports"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:gravity="center"
                            android:layout_weight="1"
                            android:textStyle="bold"
                            android:text="@string/sports" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/scienceCategory"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_130sdp"
                    android:layout_weight="1"
                    style="@style/RightSide"
                    android:layout_margin="@dimen/_5sdp"
                    app:cardElevation="15dp"
                    app:cardPreventCornerOverlap="true"
                    app:cardBackgroundColor="@color/appSecondColor"
                    app:cardMaxElevation="20dp">
                    <LinearLayout
                        android:id="@+id/science_ca"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:weightSum="5"
                        android:background="@drawable/category_shape_right_side"
                        >
                        <ImageView
                            android:id="@+id/scienceImage"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:padding="@dimen/_8sdp"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:layout_weight="4"
                            android:src="@drawable/science_icon" />
                        <TextView
                            android:id="@+id/science"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:gravity="center"
                            android:layout_weight="1"
                            android:textStyle="bold"
                            android:text="@string/science" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>


            <LinearLayout
                android:layoutDirection="ltr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:weightSum="2"
                android:orientation="horizontal">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/technologyCategory"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_130sdp"
                    android:layout_weight="1"
                    style="@style/LeftSide"
                    android:layout_margin="@dimen/_5sdp"
                    app:cardElevation="15dp"
                    app:cardPreventCornerOverlap="true"
                    app:cardBackgroundColor="@color/appSecondColor"
                    app:cardMaxElevation="20dp">
                    <LinearLayout
                        android:id="@+id/technology_ca"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:weightSum="5"
                        android:background="@drawable/category_shape_right_side"
                        >
                        <ImageView
                            android:id="@+id/technologyImage"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:padding="@dimen/_8sdp"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:layout_weight="4"
                            android:src="@drawable/technology_icon" />
                        <TextView
                            android:id="@+id/technology"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:gravity="center"
                            android:layout_weight="1"
                            android:textStyle="bold"
                            android:text="@string/technology" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/businessCategory"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_130sdp"
                    android:layout_weight="1"
                    style="@style/RightSide"
                    android:layout_margin="@dimen/_5sdp"
                    app:cardElevation="15dp"
                    app:cardPreventCornerOverlap="true"
                    app:cardBackgroundColor="@color/appSecondColor"
                    app:cardMaxElevation="20dp">
                    <LinearLayout
                        android:id="@+id/business_ca"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:weightSum="5"
                        android:background="@drawable/category_shape_right_side"
                        >
                        <ImageView
                            android:id="@+id/businessImage"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="4"
                            android:padding="@dimen/_8sdp"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:src="@drawable/business_icon" />
                        <TextView
                            android:id="@+id/business"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:gravity="center"
                            android:layout_weight="1"
                            android:textStyle="bold"
                            android:text="@string/business" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layoutDirection="ltr"
                android:weightSum="2"
                android:orientation="horizontal">
                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/healthCategory"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_130sdp"
                    android:layout_weight="1"
                    style="@style/LeftSide"
                    android:layout_margin="@dimen/_5sdp"
                    app:cardElevation="15dp"
                    app:cardPreventCornerOverlap="true"
                    app:cardBackgroundColor="@color/appSecondColor"
                    app:cardMaxElevation="20dp">
                    <LinearLayout
                        android:id="@+id/health_ca"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:weightSum="5"
                        android:background="@drawable/category_shape_right_side"
                        >
                        <ImageView
                            android:id="@+id/healthImage"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="4"
                            android:padding="@dimen/_10sdp"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:src="@drawable/health_icon" />
                        <TextView
                            android:id="@+id/health"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:gravity="center"
                            android:layout_weight="1"
                            android:textStyle="bold"
                            android:text="@string/health" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/entertainmentCategory"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_130sdp"
                    android:layout_weight="1"
                    style="@style/RightSide"
                    android:layout_margin="@dimen/_5sdp"
                    app:cardElevation="15dp"
                    app:cardPreventCornerOverlap="true"
                    app:cardBackgroundColor="@color/appSecondColor"
                    app:cardMaxElevation="20dp">
                    <LinearLayout
                        android:id="@+id/entertainment_ca"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:weightSum="5"
                        android:background="@drawable/category_shape_right_side"
                        >
                        <ImageView
                            android:id="@+id/entertainmentImage"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="4"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:padding="@dimen/_8sdp"
                            android:src="@drawable/entertainment_icon" />
                        <TextView
                            android:id="@+id/entertainment"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:gravity="center"
                            android:layout_weight="1"
                            android:textStyle="bold"
                            android:text="@string/entertainment" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>
        </LinearLayout>
        <com.jpardogo.android.googleprogressbar.library.GoogleProgressBar
            android:id="@+id/progressBar2"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:visibility="gone"
            android:layout_centerHorizontal="true"
            gbp:type="chrome_floating_circles"/>
    </FrameLayout>
</ScrollView>